<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground" />

    <TextView
        android:id="@+id/first_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/true_false_text"
        android:textAlignment="center"
        android:textColor="@color/colorQuestionsTitles"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/first_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="139dp"
            android:text="@string/integer"
            android:textColor="@color/colorQuestionsAnswers"
            android:textSize="@dimen/answers_text_size"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/double_text"
            android:textColor="@color/colorQuestionsAnswers"
            android:textSize="@dimen/answers_text_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/the_correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/boolean_text"
            android:textColor="@color/colorQuestionsAnswers"
            android:textSize="@dimen/answers_text_size"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/String"
            android:textColor="@color/colorQuestionsAnswers"
            android:textSize="@dimen/answers_text_size"
            android:textStyle="bold" />

    </RadioGroup>

    <ImageView
        android:id="@+id/next_button_to_second_question"
        android:layout_width="@dimen/next_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_question"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/first_question"
        android:layout_toRightOf="@+id/first_question"
        app:srcCompat="@drawable/nextbutton" />


</RelativeLayout>