<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground" />


    <CheckBox
        android:id="@+id/decimal_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/double_checkBox"
        android:layout_alignStart="@+id/double_checkBox"
        android:layout_below="@+id/double_checkBox"
        android:layout_marginTop="33dp"
        android:text="@string/decimal"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/answers_text_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/double_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/float_checkBox"
        android:layout_alignStart="@+id/float_checkBox"
        android:layout_centerVertical="true"
        android:text="@string/double_text"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/answers_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/seventh_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/numeric_types"
        android:textAlignment="center"
        android:textColor="@color/colorQuestionsTitles"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/int_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/decimal_checkBox"
        android:layout_alignStart="@+id/decimal_checkBox"
        android:layout_below="@+id/decimal_checkBox"
        android:layout_marginTop="33dp"
        android:text="@string/int_text"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/answers_text_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/float_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/double_checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:layout_marginLeft="136dp"
        android:layout_marginStart="136dp"
        android:text="@string/float_text"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/answers_text_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/next_button_to_seventh_question"
        android:layout_width="@dimen/next_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/int_checkBox"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/nextbutton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seventh_question_text"
        android:text="@string/more_than_one_answer"
        android:textAlignment="center"
        android:textColor="@color/colorUnderTitleText"
        android:textSize="@dimen/answers_text_size"
        android:textStyle="bold" />


</RelativeLayout>