<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground" />

    <TextView
        android:id="@+id/this_is_a_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/this_is_a"
        android:textAlignment="center"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/text_size_beginning"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number_of_questions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/java_quiz_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/you_have_six_questions"
        android:textAlignment="center"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/text_size_beginning"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/java_quiz_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/this_is_a_text"
        android:layout_marginTop="30dp"
        android:text="@string/java_quiz"
        android:textAlignment="center"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="@dimen/text_size_beginning"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/start_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        app:srcCompat="@drawable/javacupquizbegin" />

    <TextView
        android:id="@+id/good_luck_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_quiz_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/good_luck"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorQuestionsAnswers"
        android:textSize="50sp"
        android:textStyle="bold" />

</RelativeLayout>